update final thesis

--- a/notebooks/Add_run_elements_specific.ipynb
+++ b/notebooks/Add_run_elements_specific.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 1,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "id": "cee0801e-1da0-498f-a3ec-2f8c69518bb0",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": null,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": null,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -434,21 +434,21 @@
     "        \"early_stopping_patience\": 3,\n",
     "    },\n",
     "    # \"learning_rate\": [0.01, 0.001],\n",
-    "    \"batch_size\": [2048, 4096],\n",
-    "    \"tree_depth\": [4, 6],\n",
-    "    \"num_trees\": [4, 8],\n",
+    "    \"batch_size\": [512, 1024],\n",
+    "    \"tree_depth\": [5, 6],\n",
+    "    \"num_trees\": [6, 8],\n",
     "    #\"chain_trees\": [False, True],\n",
-    "    \"gflu_stages\": [3, 8],\n",
+    "    \"gflu_stages\": [3,6],\n",
     "    \"gflu_dropout\": [0.0, 0.05],\n",
     "    \"tree_dropout\": [0.0, 0.05],\n",
     "    \"tree_wise_attention_dropout\": [0.0, 0.05],\n",
     "    \"embedding_dropout\": [0, 0.2],\n",
     "    \"optimizer_fn\": {\n",
-    "        \"Adam\": {\"weight_decay\": [0.0001, 0.00001]},\n",
-    "        \"AdamW\": {\"weight_decay\": [0.0001, 0.00001]},\n",
+    "        \"Adam\": {\"weight_decay\": [0.001, 0.0001]},\n",
+    "        \"AdamW\": {\"weight_decay\": [0.001, 0.0001]},\n",
     "    },\n",
     "    \"scheduler_fn\": {\n",
-    "        \"ReduceLROnPlateau\": {\"factor\": [0.1, 0.9], \"patience\": [3, 5]},\n",
+    "        \"ReduceLROnPlateau\": {\"factor\": [0.1, 0.9], \"patience\": [2, 4]},\n",
     "        \"ExponentialLR\": {\"gamma\": [0.9, 0.99]},\n",
     "    },\n",
     "}"
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": null,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": null,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": null,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "id": "9c75b306-d201-4889-a613-c885a3463ae4",
    "metadata": {},
    "outputs": [],
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "id": "32d03d4b-ce74-4e04-9f50-42341eefb328",
    "metadata": {},
    "outputs": [],
@@ -1192,44 +1192,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
    "id": "24781a9a-0cae-418f-8e09-3cd6f616fa88",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "### XGB ###\n",
-      "('covertype', 'xgb')\n",
-      "### CATBOOST ###\n",
-      "### MLP ###\n",
-      "('covertype', 'mlp')\n",
-      "### TABNET ###\n",
-      "### GATE ###\n",
-      "('diabetes', 'gate')\n",
-      "('housing', 'gate')\n",
-      "('creditcard', 'gate')\n",
-      "('covertype', 'gate')\n",
-      "### RESNET ###\n",
-      "('housing', 'resnet')\n",
-      "### S1DCNN ###\n",
-      "('housing', 's1dcnn')\n",
-      "('creditcard', 's1dcnn')\n",
-      "('covertype', 's1dcnn')\n",
-      "### CATEGORYEMBEDDING ###\n",
-      "### FTTRANSFORMER ###\n",
-      "('housing', 'fttransformer')\n",
-      "('creditcard', 'fttransformer')\n",
-      "### TABTRANSFORMER ###\n",
-      "('housing', 'tabtransformer')\n",
-      "### GANDALF ###\n",
-      "('housing', 'gandalf')\n",
-      "### AUTOINT ###\n",
-      "### NODE ###\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for mod in included_models:\n",
     "    print(f\"### {mod.upper()} ###\")\n",
@@ -1240,42 +1206,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
    "id": "9288a35a-015b-410d-984e-bc970373cf8c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total Missing Runs:  14\n",
-      "### IRIS ###\n",
-      "### TITANIC ###\n",
-      "### BREASTCANCER ###\n",
-      "### AGECONDITIONS ###\n",
-      "### DIABETES ###\n",
-      "('diabetes', 'gate')\n",
-      "### ADULT ###\n",
-      "### HOUSING ###\n",
-      "('housing', 'gate')\n",
-      "('housing', 'resnet')\n",
-      "('housing', 's1dcnn')\n",
-      "('housing', 'fttransformer')\n",
-      "('housing', 'tabtransformer')\n",
-      "('housing', 'gandalf')\n",
-      "### CREDITCARD ###\n",
-      "('creditcard', 'gate')\n",
-      "('creditcard', 's1dcnn')\n",
-      "('creditcard', 'fttransformer')\n",
-      "### HELOC ###\n",
-      "### COVERTYPE ###\n",
-      "('covertype', 'xgb')\n",
-      "('covertype', 'mlp')\n",
-      "('covertype', 'gate')\n",
-      "('covertype', 's1dcnn')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Total Missing Runs: \", len(total_missing_combos))\n",
     "for mod in included_datasets:\n",
@@ -1288,37 +1222,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": null,
    "id": "1e993276-4526-489d-a292-38f0a995e281",
    "metadata": {},
    "outputs": [],
    "source": [
     "templates1 = [\n",
     "generate_model_template(\n",
-    "\"covertype\", \"xgb\", param_grid=xgb_large_param_grid.copy()\n",
+    "\"covertype\", \"s1dcnn\", param_grid=gate_large_param_grid.copy()\n",
     "),\n",
+    "\n",
     "]\n",
     "\n",
     "templates2 = [\n",
     "\n",
-    "generate_model_template(\n",
-    "\"creditcard\", \"gate\", param_grid=gate_large_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "\"creditcard\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
-    "),\n",
     "]\n",
     "\n",
     "templates3 = [\n",
-    "generate_model_template(\n",
-    "\"diabetes\", \"gate\", param_grid=gate_large_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "\"covertype\", \"gate\", param_grid=gate_large_param_grid.copy()\n",
-    "),\n",
+    "\n",
     "\n",
     "]\n",
-    "\n",
     "\n",
     "templates4 = [\n",
     "]"
@@ -1326,32 +1249,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "id": "9b6fb5db-13b1-4073-a150-cf73d4b3efbb",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('creditcard', 'gate'),\n",
-       " ('creditcard', 's1dcnn'),\n",
-       " ('creditcard', 'fttransformer')]"
-      ]
-     },
-     "execution_count": 156,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "[i for i in total_missing_combos if \"creditcard\" in i]"
+    "[i for i in total_missing_combos if \"covertype\" in i]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "id": "9e34d761-8131-464c-85f6-084411d2aaa3",
    "metadata": {},
    "outputs": [],
@@ -1365,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
@@ -1377,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "id": "6f1fdf1e-2497-41fc-ba38-969478bb053b",
    "metadata": {},
    "outputs": [],
@@ -1389,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": null,
    "id": "27327b29-18f5-444e-b15d-e26ab72036cb",
    "metadata": {},
    "outputs": [],
@@ -1401,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": null,
    "id": "0d341ee6-91a6-4267-ae89-62d1d68f1e81",
    "metadata": {},
    "outputs": [],
@@ -1413,18 +1323,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
    "id": "9ee7bcaf-81ca-450e-8a57-de6deaf74d36",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SUCCESS\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"SUCCESS\")"
    ]
