--- a/notebooks/Add_run_elements_specific.ipynb
+++ b/notebooks/Add_run_elements_specific.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cee0801e-1da0-498f-a3ec-2f8c69518bb0",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
     "\n",
     "xgb_large_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"hyperopt_evals\": 5,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"validation_fraction\": 0.15,\n",
     "        \"early_stopping_rounds\": 50,\n",
     "        \"verbose\": False,\n",
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "9c75b306-d201-4889-a613-c885a3463ae4",
    "metadata": {},
    "outputs": [],
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "32d03d4b-ce74-4e04-9f50-42341eefb328",
    "metadata": {},
    "outputs": [],
@@ -1192,10 +1192,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "24781a9a-0cae-418f-8e09-3cd6f616fa88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "### XGB ###\n",
+      "### CATBOOST ###\n",
+      "### MLP ###\n",
+      "('covertype', 'mlp')\n",
+      "### TABNET ###\n",
+      "### GATE ###\n",
+      "('diabetes', 'gate')\n",
+      "('housing', 'gate')\n",
+      "('creditcard', 'gate')\n",
+      "### RESNET ###\n",
+      "('housing', 'resnet')\n",
+      "### S1DCNN ###\n",
+      "('housing', 's1dcnn')\n",
+      "('creditcard', 's1dcnn')\n",
+      "('covertype', 's1dcnn')\n",
+      "### CATEGORYEMBEDDING ###\n",
+      "### FTTRANSFORMER ###\n",
+      "('housing', 'fttransformer')\n",
+      "('creditcard', 'fttransformer')\n",
+      "### TABTRANSFORMER ###\n",
+      "('housing', 'tabtransformer')\n",
+      "### GANDALF ###\n",
+      "('housing', 'gandalf')\n",
+      "### AUTOINT ###\n",
+      "### NODE ###\n"
+     ]
+    }
+   ],
    "source": [
     "for mod in included_models:\n",
     "    print(f\"### {mod.upper()} ###\")\n",
@@ -1206,10 +1238,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "9288a35a-015b-410d-984e-bc970373cf8c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Missing Runs:  12\n",
+      "### IRIS ###\n",
+      "### TITANIC ###\n",
+      "### BREASTCANCER ###\n",
+      "### AGECONDITIONS ###\n",
+      "### DIABETES ###\n",
+      "('diabetes', 'gate')\n",
+      "### ADULT ###\n",
+      "### HOUSING ###\n",
+      "('housing', 'gate')\n",
+      "('housing', 'resnet')\n",
+      "('housing', 's1dcnn')\n",
+      "('housing', 'fttransformer')\n",
+      "('housing', 'tabtransformer')\n",
+      "('housing', 'gandalf')\n",
+      "### CREDITCARD ###\n",
+      "('creditcard', 'gate')\n",
+      "('creditcard', 's1dcnn')\n",
+      "('creditcard', 'fttransformer')\n",
+      "### HELOC ###\n",
+      "### COVERTYPE ###\n",
+      "('covertype', 'mlp')\n",
+      "('covertype', 's1dcnn')\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Total Missing Runs: \", len(total_missing_combos))\n",
     "for mod in included_datasets:\n",
@@ -1222,14 +1284,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "1e993276-4526-489d-a292-38f0a995e281",
    "metadata": {},
    "outputs": [],
    "source": [
     "templates1 = [\n",
     "generate_model_template(\n",
-    "\"covertype\", \"s1dcnn\", param_grid=gate_large_param_grid.copy()\n",
+    "\"creditcard\", \"xgb\", param_grid=xgb_large_param_grid.copy()\n",
     "),\n",
     "\n",
     "]\n",
@@ -1249,19 +1311,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "9b6fb5db-13b1-4073-a150-cf73d4b3efbb",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('covertype', 'mlp'), ('covertype', 's1dcnn')]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "[i for i in total_missing_combos if \"covertype\" in i]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "9e34d761-8131-464c-85f6-084411d2aaa3",
    "metadata": {},
    "outputs": [],
@@ -1275,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
@@ -1287,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "6f1fdf1e-2497-41fc-ba38-969478bb053b",
    "metadata": {},
    "outputs": [],
@@ -1299,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "27327b29-18f5-444e-b15d-e26ab72036cb",
    "metadata": {},
    "outputs": [],
@@ -1311,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "0d341ee6-91a6-4267-ae89-62d1d68f1e81",
    "metadata": {},
    "outputs": [],
@@ -1323,10 +1396,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "9ee7bcaf-81ca-450e-8a57-de6deaf74d36",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SUCCESS\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"SUCCESS\")"
    ]
