--- a/autodeep/examples/test_auto.ipynb
+++ b/autodeep/examples/test_auto.ipynb
@@ -64,8 +64,7 @@
     "    \"xgb\",\n",
     "    \"catboost\",\n",
     "    \"mlp\",\n",
-    "    \"resnet\",\n",
-    "    \"tabnet\",\n",
+    "    \"categoryembedding\",\n",
     "]  # Add any new models here\n",
     "\n",
     "# Define the configuration dictionary for datasets\n",
