--- a/autodeep/examples/test_auto.ipynb
+++ b/autodeep/examples/test_auto.ipynb
@@ -17773,10 +17773,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'isort'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 20\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# Run isort\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlinting_outputs\u001b[39m\u001b[38;5;124m\"\u001b[39m, output_files[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124misort\u001b[39m\u001b[38;5;124m\"\u001b[39m]), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m---> 20\u001b[0m     \u001b[43msubprocess\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43misort\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfolder_to_check\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstdout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstderr\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mf\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# Run black\u001b[39;00m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlinting_outputs\u001b[39m\u001b[38;5;124m\"\u001b[39m, output_files[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mblack\u001b[39m\u001b[38;5;124m\"\u001b[39m]), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.10.0/lib/python3.10/subprocess.py:501\u001b[0m, in \u001b[0;36mrun\u001b[0;34m(input, capture_output, timeout, check, *popenargs, **kwargs)\u001b[0m\n\u001b[1;32m    498\u001b[0m     kwargs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstdout\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m PIPE\n\u001b[1;32m    499\u001b[0m     kwargs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstderr\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m PIPE\n\u001b[0;32m--> 501\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mPopen\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mpopenargs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m process:\n\u001b[1;32m    502\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    503\u001b[0m         stdout, stderr \u001b[38;5;241m=\u001b[39m process\u001b[38;5;241m.\u001b[39mcommunicate(\u001b[38;5;28minput\u001b[39m, timeout\u001b[38;5;241m=\u001b[39mtimeout)\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.10.0/lib/python3.10/subprocess.py:966\u001b[0m, in \u001b[0;36mPopen.__init__\u001b[0;34m(self, args, bufsize, executable, stdin, stdout, stderr, preexec_fn, close_fds, shell, cwd, env, universal_newlines, startupinfo, creationflags, restore_signals, start_new_session, pass_fds, user, group, extra_groups, encoding, errors, text, umask, pipesize)\u001b[0m\n\u001b[1;32m    962\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtext_mode:\n\u001b[1;32m    963\u001b[0m             \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstderr \u001b[38;5;241m=\u001b[39m io\u001b[38;5;241m.\u001b[39mTextIOWrapper(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstderr,\n\u001b[1;32m    964\u001b[0m                     encoding\u001b[38;5;241m=\u001b[39mencoding, errors\u001b[38;5;241m=\u001b[39merrors)\n\u001b[0;32m--> 966\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execute_child\u001b[49m\u001b[43m(\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexecutable\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpreexec_fn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mclose_fds\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    967\u001b[0m \u001b[43m                        \u001b[49m\u001b[43mpass_fds\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcwd\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43menv\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    968\u001b[0m \u001b[43m                        \u001b[49m\u001b[43mstartupinfo\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreationflags\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshell\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    969\u001b[0m \u001b[43m                        \u001b[49m\u001b[43mp2cread\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mp2cwrite\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    970\u001b[0m \u001b[43m                        \u001b[49m\u001b[43mc2pread\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mc2pwrite\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    971\u001b[0m \u001b[43m                        \u001b[49m\u001b[43merrread\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merrwrite\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    972\u001b[0m \u001b[43m                        \u001b[49m\u001b[43mrestore_signals\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    973\u001b[0m \u001b[43m                        \u001b[49m\u001b[43mgid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgids\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43muid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mumask\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    974\u001b[0m \u001b[43m                        \u001b[49m\u001b[43mstart_new_session\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    975\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m:\n\u001b[1;32m    976\u001b[0m     \u001b[38;5;66;03m# Cleanup if the child failed starting.\u001b[39;00m\n\u001b[1;32m    977\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mfilter\u001b[39m(\u001b[38;5;28;01mNone\u001b[39;00m, (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstdin, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstdout, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstderr)):\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.10.0/lib/python3.10/subprocess.py:1842\u001b[0m, in \u001b[0;36mPopen._execute_child\u001b[0;34m(self, args, executable, preexec_fn, close_fds, pass_fds, cwd, env, startupinfo, creationflags, shell, p2cread, p2cwrite, c2pread, c2pwrite, errread, errwrite, restore_signals, gid, gids, uid, umask, start_new_session)\u001b[0m\n\u001b[1;32m   1840\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m errno_num \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m   1841\u001b[0m         err_msg \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mstrerror(errno_num)\n\u001b[0;32m-> 1842\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m child_exception_type(errno_num, err_msg, err_filename)\n\u001b[1;32m   1843\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m child_exception_type(err_msg)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'isort'"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import subprocess\n",
+    "\n",
+    "# Define the folder to format and lint\n",
+    "folder_to_check = \"autodeep\"\n",
+    "\n",
+    "# Define output files\n",
+    "output_files = {\n",
+    "    \"isort\": \"isort_output.txt\",\n",
+    "    \"black\": \"black_output.txt\",\n",
+    "    \"pylint\": \"pylint_output.txt\",\n",
+    "    \"flake8\": \"flake8_output.txt\",\n",
+    "}\n",
+    "\n",
+    "# Ensure the output folder exists\n",
+    "os.makedirs(\"linting_outputs\", exist_ok=True)\n",
+    "\n",
+    "# Run isort\n",
+    "with open(os.path.join(\"linting_outputs\", output_files[\"isort\"]), \"w\") as f:\n",
+    "    subprocess.run([\"isort\", folder_to_check], stdout=f, stderr=f)\n",
+    "\n",
+    "# Run black\n",
+    "with open(os.path.join(\"linting_outputs\", output_files[\"black\"]), \"w\") as f:\n",
+    "    subprocess.run([\"black\", folder_to_check], stdout=f, stderr=f)\n",
+    "\n",
+    "# Run pylint\n",
+    "with open(os.path.join(\"linting_outputs\", output_files[\"pylint\"]), \"w\") as f:\n",
+    "    subprocess.run([\"pylint\", folder_to_check], stdout=f, stderr=f)\n",
+    "\n",
+    "# Run flake8\n",
+    "with open(os.path.join(\"linting_outputs\", output_files[\"flake8\"]), \"w\") as f:\n",
+    "    subprocess.run([\"flake8\", folder_to_check], stdout=f, stderr=f)\n",
+    "\n",
+    "print(\"Linting and formatting completed. Outputs are saved in the 'linting_outputs' folder.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting isort\n",
+      "  Downloading isort-5.13.2-py3-none-any.whl.metadata (12 kB)\n",
+      "Collecting black\n",
+      "  Downloading black-24.10.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.manylinux_2_28_x86_64.whl.metadata (79 kB)\n",
+      "Collecting pylint\n",
+      "  Downloading pylint-3.3.3-py3-none-any.whl.metadata (12 kB)\n",
+      "Collecting flake8\n",
+      "  Downloading flake8-7.1.1-py2.py3-none-any.whl.metadata (3.8 kB)\n",
+      "Requirement already satisfied: click>=8.0.0 in /home/boom/.pyenv/versions/3.10.0/envs/thesis/lib/python3.10/site-packages (from black) (8.1.6)\n",
+      "Collecting mypy-extensions>=0.4.3 (from black)\n",
+      "  Downloading mypy_extensions-1.0.0-py3-none-any.whl.metadata (1.1 kB)\n",
+      "Requirement already satisfied: packaging>=22.0 in /home/boom/.pyenv/versions/3.10.0/envs/thesis/lib/python3.10/site-packages (from black) (23.1)\n",
+      "Collecting pathspec>=0.9.0 (from black)\n",
+      "  Downloading pathspec-0.12.1-py3-none-any.whl.metadata (21 kB)\n",
+      "Requirement already satisfied: platformdirs>=2 in /home/boom/.pyenv/versions/3.10.0/envs/thesis/lib/python3.10/site-packages (from black) (3.10.0)\n",
+      "Requirement already satisfied: tomli>=1.1.0 in /home/boom/.pyenv/versions/3.10.0/envs/thesis/lib/python3.10/site-packages (from black) (2.0.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.0.1 in /home/boom/.pyenv/versions/3.10.0/envs/thesis/lib/python3.10/site-packages (from black) (4.7.1)\n",
+      "Collecting dill>=0.2 (from pylint)\n",
+      "  Downloading dill-0.3.9-py3-none-any.whl.metadata (10 kB)\n",
+      "Collecting astroid<=3.4.0-dev0,>=3.3.8 (from pylint)\n",
+      "  Downloading astroid-3.3.8-py3-none-any.whl.metadata (4.5 kB)\n",
+      "Collecting mccabe<0.8,>=0.6 (from pylint)\n",
+      "  Downloading mccabe-0.7.0-py2.py3-none-any.whl.metadata (5.0 kB)\n",
+      "Collecting tomlkit>=0.10.1 (from pylint)\n",
+      "  Downloading tomlkit-0.13.2-py3-none-any.whl.metadata (2.7 kB)\n",
+      "Collecting pycodestyle<2.13.0,>=2.12.0 (from flake8)\n",
+      "  Downloading pycodestyle-2.12.1-py2.py3-none-any.whl.metadata (4.5 kB)\n",
+      "Collecting pyflakes<3.3.0,>=3.2.0 (from flake8)\n",
+      "  Downloading pyflakes-3.2.0-py2.py3-none-any.whl.metadata (3.5 kB)\n",
+      "Downloading isort-5.13.2-py3-none-any.whl (92 kB)\n",
+      "Downloading black-24.10.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.manylinux_2_28_x86_64.whl (1.8 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m35.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading pylint-3.3.3-py3-none-any.whl (521 kB)\n",
+      "Downloading flake8-7.1.1-py2.py3-none-any.whl (57 kB)\n",
+      "Downloading astroid-3.3.8-py3-none-any.whl (275 kB)\n",
+      "Downloading dill-0.3.9-py3-none-any.whl (119 kB)\n",
+      "Downloading mccabe-0.7.0-py2.py3-none-any.whl (7.3 kB)\n",
+      "Downloading mypy_extensions-1.0.0-py3-none-any.whl (4.7 kB)\n",
+      "Downloading pathspec-0.12.1-py3-none-any.whl (31 kB)\n",
+      "Downloading pycodestyle-2.12.1-py2.py3-none-any.whl (31 kB)\n",
+      "Downloading pyflakes-3.2.0-py2.py3-none-any.whl (62 kB)\n",
+      "Downloading tomlkit-0.13.2-py3-none-any.whl (37 kB)\n",
+      "Installing collected packages: tomlkit, pyflakes, pycodestyle, pathspec, mypy-extensions, mccabe, isort, dill, astroid, pylint, flake8, black\n",
+      "Successfully installed astroid-3.3.8 black-24.10.0 dill-0.3.9 flake8-7.1.1 isort-5.13.2 mccabe-0.7.0 mypy-extensions-1.0.0 pathspec-0.12.1 pycodestyle-2.12.1 pyflakes-3.2.0 pylint-3.3.3 tomlkit-0.13.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install isort black pylint flake8\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linting and formatting completed. Outputs are saved in the 'linting_outputs' folder.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import subprocess\n",
+    "\n",
+    "# Define the path to the folder to format and lint (one level up from the current directory)\n",
+    "folder_to_check = \"../../autodeep\"\n",
+    "\n",
+    "# Define the output folder and ensure it exists\n",
+    "output_folder = \"linting_outputs\"\n",
+    "os.makedirs(output_folder, exist_ok=True)\n",
+    "\n",
+    "# Define the output files\n",
+    "output_files = {\n",
+    "    \"isort\": \"isort_output.txt\",\n",
+    "    \"black\": \"black_output.txt\",\n",
+    "    \"pylint\": \"pylint_output.txt\",\n",
+    "    \"flake8\": \"flake8_output.txt\",\n",
+    "}\n",
+    "\n",
+    "# Run isort\n",
+    "isort_output_path = os.path.join(output_folder, output_files[\"isort\"])\n",
+    "with open(isort_output_path, \"w\") as f:\n",
+    "    subprocess.run([\"isort\", folder_to_check], stdout=f, stderr=f)\n",
+    "\n",
+    "# Run black\n",
+    "black_output_path = os.path.join(output_folder, output_files[\"black\"])\n",
+    "with open(black_output_path, \"w\") as f:\n",
+    "    subprocess.run([\"black\", folder_to_check], stdout=f, stderr=f)\n",
+    "\n",
+    "# Run pylint\n",
+    "pylint_output_path = os.path.join(output_folder, output_files[\"pylint\"])\n",
+    "with open(pylint_output_path, \"w\") as f:\n",
+    "    subprocess.run([\"pylint\", folder_to_check], stdout=f, stderr=f)\n",
+    "\n",
+    "# Run flake8\n",
+    "flake8_output_path = os.path.join(output_folder, output_files[\"flake8\"])\n",
+    "with open(flake8_output_path, \"w\") as f:\n",
+    "    subprocess.run([\"flake8\", folder_to_check], stdout=f, stderr=f)\n",
+    "\n",
+    "print(f\"Linting and formatting completed. Outputs are saved in the '{output_folder}' folder.\")\n"
+   ]
   },
   {
    "cell_type": "code",
