--- a/autodeep/examples/test_auto.ipynb
+++ b/autodeep/examples/test_auto.ipynb
@@ -44,6 +44,110 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(r\"../examples/testautodata/adult.csv\")\n",
+    "df[\"s\"] = \"s\"\n",
+    "df[\"a\"] = \"s\"\n",
+    "df[\"f\"] = \"s\"\n",
+    "df[\"y\"] = \"s\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import numpy as np\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "def _auto_determine_img_size(X):\n",
+    "    num_features = len(X.columns)\n",
+    "\n",
+    "    # Find valid (row, col) pairs where row * col = num_features\n",
+    "    factors = [\n",
+    "        (r, num_features // r)\n",
+    "        for r in range(1, int(np.sqrt(num_features)) + 1)\n",
+    "        if num_features % r == 0\n",
+    "    ]\n",
+    "    print(factors)\n",
+    "    # Pick the most square-like option (largest row)\n",
+    "    num_row, num_col = factors[-1]\n",
+    "\n",
+    "    # Check if num_features is prime (only divisible by 1 and itself)\n",
+    "    if len(factors) == 1:  # Only (1, num_features) exists\n",
+    "        print(\n",
+    "            f\"Warning: The number of features ({num_features}) is prime. \"\n",
+    "            \"For better IGTD performance, consider adding or removing columns to allow a more standard grid size.\"\n",
+    "        )\n",
+    "\n",
+    "    return num_row, num_col\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32561, 19)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 19)]\n",
+      "Warning: The number of features (19) is prime. For better IGTD performance, consider adding or removing columns to allow a more standard grid size.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1, 19)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_auto_determine_img_size(df)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
